--- a/Lab03-03-WindowForm-Application.ipynb
+++ b/Lab03-03-WindowForm-Application.ipynb
@@ -128,11 +128,11 @@
    "source": [
     "11. ปรับเปลี่ยน code ในข้อ 9 ให้เป็นดังนี้\n",
     "\n",
-    "```csharp\n",
-    "        Button button1 = new Button();\n",
-    "        button1.Text = \"button 1\";\n",
-    "        Controls.Add(button1);\n",
-    "```\n",
+    ">        ```csharp\n",
+    ">        Button button1 = new Button();\n",
+    ">        button1.Text = \"button 1\";\n",
+    ">        Controls.Add(button1);\n",
+    ">        ```\n",
     "\n",
     "12. พิมพ์คำสั่ง `dotnet run` ใน terminal เพื่อรันโปรแกรม"
    ]
@@ -200,38 +200,38 @@
     " Code ที่ต้องเพิ่ม\n",
     "\n",
     "\n",
-    "```cs\n",
-    "// สร้าง object ของ controls ที่จะวางบน form\n",
-    "buttonAdd = new Button();\n",
-    "label_A = new Label();\n",
-    "label_B= new Label();\n",
-    "label_C= new Label();\n",
-    "textBox_A = new TextBox();\n",
-    "textBox_B = new TextBox();\n",
-    "textBox_C = new TextBox();\n",
-    "\n",
-    "// หยุดการแสดงผลบน form ชั่วคราว (freeze) โดยคำสั่ง SuspendLayout(); \n",
-    "// เพื่อไม่ให้เกิดการกระพริบในระหว่างที่เพิ่ม control ทีละตัว\n",
-    "// กรณีดังกล่าวอาจจะเกิดขึ้นได้ในตอนที่คอมพิวเตอร์ทำงานหนัก หรือการ์ดแสดงผลทำงานช้า\n",
-    "// ซึ่งจะทำให้เกิดความไม่สบายตาแก่ผู้ใช้\n",
-    "// controls ต่างๆ ที่ถูกเพิ่มหลังคำสั่ง SuspendLayout(); จะไม่ถูกนำไปแสดงผลบนหน้าจอ\n",
-    "// ต้องใช้คำสั่ง ResumeLayout เพื่อยกเลิกการ freez หน้าจอ\n",
-    "SuspendLayout();\n",
-    "\n",
-    "// เพิ่ม label สำหรับตัวแปร A\n",
-    "label_A.AutoSize = true;\n",
-    "label_A.Location = new Point(25, 24);\n",
-    "label_A.Name = \"label_A\";\n",
-    "label_A.Size = new Size(15, 15);\n",
-    "label_A.Text = \"A\";\n",
-    "Controls.Add(label_A);\n",
-    "\n",
-    "\n",
-    "// เมื่อเพิ่ม controls เสร็จแล้ว ให้เรียก ResumeLayout(false); เพื่อ update หน้าจอชอง form\n",
-    "// จะทำให้โปรแกรมสามารถรันได้ตามปกติ\n",
-    "ResumeLayout(false);\n",
-    "PerformLayout();\n",
-    "```\n",
+    ">    ```cs\n",
+    ">    // สร้าง object ของ controls ที่จะวางบน form\n",
+    ">    buttonAdd = new Button();\n",
+    ">    label_A = new Label();\n",
+    ">    label_B= new Label();\n",
+    ">    label_C= new Label();\n",
+    ">    textBox_A = new TextBox();\n",
+    ">    textBox_B = new TextBox();\n",
+    ">    textBox_C = new TextBox();\n",
+    ">\n",
+    ">    // หยุดการแสดงผลบน form ชั่วคราว (freeze) โดยคำสั่ง SuspendLayout(); \n",
+    ">    // เพื่อไม่ให้เกิดการกระพริบในระหว่างที่เพิ่ม control ทีละตัว\n",
+    ">    // กรณีดังกล่าวอาจจะเกิดขึ้นได้ในตอนที่คอมพิวเตอร์ทำงานหนัก หรือการ์ดแสดงผลทำงานช้า\n",
+    ">    // ซึ่งจะทำให้เกิดความไม่สบายตาแก่ผู้ใช้\n",
+    ">    // controls ต่างๆ ที่ถูกเพิ่มหลังคำสั่ง SuspendLayout(); จะไม่ถูกนำไปแสดงผลบนหน้าจอ\n",
+    ">    // ต้องใช้คำสั่ง ResumeLayout เพื่อยกเลิกการ freez หน้าจอ\n",
+    ">    SuspendLayout();\n",
+    ">\n",
+    ">    // เพิ่ม label สำหรับตัวแปร A\n",
+    ">    label_A.AutoSize = true;\n",
+    ">    label_A.Location = new Point(25, 24);\n",
+    ">    label_A.Name = \"label_A\";\n",
+    ">    label_A.Size = new Size(15, 15);\n",
+    ">    label_A.Text = \"A\";\n",
+    ">    Controls.Add(label_A);\n",
+    ">\n",
+    ">\n",
+    ">    // เมื่อเพิ่ม controls เสร็จแล้ว ให้เรียก ResumeLayout(false); เพื่อ update หน้าจอชอง form\n",
+    ">    // จะทำให้โปรแกรมสามารถรันได้ตามปกติ\n",
+    ">    ResumeLayout(false);\n",
+    ">    PerformLayout();\n",
+    ">    ```\n",
     "\n",
     "16.2 เพิ่มตัวแปร reference ของตัวแปรบน  windows form ไว้ก่อนบรรทัด #endregion \n",
     "\n",
@@ -263,14 +263,14 @@
     "\n",
     "19.1 เพิ่ม Label_B\n",
     "\n",
-    "```cs\n",
-    "label_B.AutoSize = true;\n",
-    "label_B.Location = new Point(26, 53);\n",
-    "label_B.Name = \"label_B\";\n",
-    "label_B.Size = new Size(14, 15);\n",
-    "label_B.Text = \"B\";\n",
-    "Controls.Add(label_B);\n",
-    "```\n",
+    ">    ```cs\n",
+    ">    label_B.AutoSize = true;\n",
+    ">    label_B.Location = new Point(26, 53);\n",
+    ">    label_B.Name = \"label_B\";\n",
+    ">    label_B.Size = new Size(14, 15);\n",
+    ">    label_B.Text = \"B\";\n",
+    ">    Controls.Add(label_B);\n",
+    ">    ```\n",
     "\n",
     "__หมายเหตุ__  \n",
     "\n",
@@ -289,14 +289,14 @@
     "\n",
     "20.1 Code ทื่ต้องเพิ่ม\n",
     "\n",
-    "```cs\n",
-    "label_C.AutoSize = true;\n",
-    "label_C.Location = new Point(26, 112);\n",
-    "label_C.Name = \"label_C\";\n",
-    "label_C.Size = new Size(15, 15);\n",
-    "label_C.Text = \"C\";\n",
-    "Controls.Add(label_C);\n",
-    "```\n",
+    ">    ```cs\n",
+    ">    label_C.AutoSize = true;\n",
+    ">    label_C.Location = new Point(26, 112);\n",
+    ">    label_C.Name = \"label_C\";\n",
+    ">    label_C.Size = new Size(15, 15);\n",
+    ">    label_C.Text = \"C\";\n",
+    ">    Controls.Add(label_C);\n",
+    ">    ```\n",
     "\n",
     "20.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
@@ -311,12 +311,12 @@
     "\n",
     "21.1 Code ทื่ต้องเพิ่ม\n",
     "\n",
-    "```cs\n",
-    "textBox_A.Location = new Point(46, 20);\n",
-    "textBox_A.Name = \"textBox_A\";\n",
-    "textBox_A.Size = new Size(100, 23);\n",
-    "Controls.Add(textBox_A);\n",
-    "```\n",
+    ">    ```cs\n",
+    ">    textBox_A.Location = new Point(46, 20);\n",
+    ">    textBox_A.Name = \"textBox_A\";\n",
+    ">    textBox_A.Size = new Size(100, 23);\n",
+    ">    Controls.Add(textBox_A);\n",
+    ">    ```\n",
     "\n",
     "21.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
@@ -331,12 +331,12 @@
     "\n",
     "22.1 Code ทื่ต้องเพิ่ม\n",
     "\n",
-    "```cs\n",
-    "textBox_B.Location = new Point(46, 49);\n",
-    "textBox_B.Name = \"textBox_B\";\n",
-    "textBox_B.Size = new Size(100, 23);\n",
-    "Controls.Add(textBox_B);\n",
-    "```\n",
+    ">    ```cs\n",
+    ">    textBox_B.Location = new Point(46, 49);\n",
+    ">    textBox_B.Name = \"textBox_B\";\n",
+    ">    textBox_B.Size = new Size(100, 23);\n",
+    ">    Controls.Add(textBox_B);\n",
+    ">    ```\n",
     "\n",
     "22.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
@@ -356,12 +356,12 @@
    "source": [
     "23.1 Code ทื่ต้องเพิ่ม\n",
     "\n",
-    "```cs\n",
-    "textBox_C.Location = new Point(46, 108);\n",
-    "textBox_C.Name = \"textBox_C\";\n",
-    "textBox_C.Size = new Size(100, 23);\n",
-    "Controls.Add(textBox_C);\n",
-    "```\n",
+    ">    ```cs\n",
+    ">    textBox_C.Location = new Point(46, 108);\n",
+    ">    textBox_C.Name = \"textBox_C\";\n",
+    ">    textBox_C.Size = new Size(100, 23);\n",
+    ">    Controls.Add(textBox_C);\n",
+    ">    ```\n",
     "23.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
     "23.3 สังเกตุและบันทึกผล"
@@ -380,13 +380,13 @@
    "source": [
     "24.1 Code ทื่ต้องเพิ่ม\n",
     "\n",
-    "```cs\n",
-    "buttonAdd.Location = new Point(59, 79);\n",
-    "buttonAdd.Name = \"buttonAdd\";\n",
-    "buttonAdd.Size = new Size(75, 23);\n",
-    "buttonAdd.Text = \"Add\";\n",
-    "Controls.Add(buttonAdd);\n",
-    "```\n",
+    ">    ```cs\n",
+    ">    buttonAdd.Location = new Point(59, 79);\n",
+    ">    buttonAdd.Name = \"buttonAdd\";\n",
+    ">    buttonAdd.Size = new Size(75, 23);\n",
+    ">    buttonAdd.Text = \"Add\";\n",
+    ">    Controls.Add(buttonAdd);\n",
+    ">    ```\n",
     "\n",
     "24.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
@@ -413,16 +413,16 @@
     "\n",
     "25.2 ในไฟล์ Form1.cs  ให้เพิ่มเมธอด `buttonAdd_Click()` ไว้ใต้เมธอด `public Form1()`\n",
     "\n",
-    "```cs\n",
-    "private void buttonAdd_Click(object sender, EventArgs e)\n",
-    "{\n",
-    "    double a, b, c;\n",
-    "    double.TryParse(textBox_A.Text, out a);\n",
-    "    double.TryParse(textBox_B.Text, out b);\n",
-    "    c = a + b;\n",
-    "    textBox_C.Text = c.ToString();\n",
-    "}\n",
-    "```\n",
+    ">    ```cs\n",
+    ">    private void buttonAdd_Click(object sender, EventArgs e)\n",
+    ">    {\n",
+    ">        double a, b, c;\n",
+    ">        double.TryParse(textBox_A.Text, out a);\n",
+    ">        double.TryParse(textBox_B.Text, out b);\n",
+    ">        c = a + b;\n",
+    ">        textBox_C.Text = c.ToString();\n",
+    ">    }\n",
+    ">    ```\n",
     "\n",
     "25.3 ฺ  พิมพ์คำสั่ง dotnet build ใน terminal ต้องไม่มี error ใดๆ ถ้ามีให้แก้ให้ถูกต้อง "
    ]
