--- a/Lab03-04-Blazor-Server-Application.ipynb
+++ b/Lab03-04-Blazor-Server-Application.ipynb
@@ -92,17 +92,17 @@
    "source": [
     "9. ทดลองแก้ไข code โดยการเปิดไฟล์ Home.razor ซึ่งอยู่ในโฟลเดอร์ Component/Pages ให้เป็นดังนี้\n",
     "\n",
-    "```r\n",
-    "@page \"/\"\n",
-    "\n",
-    "<PageTitle>Home</PageTitle>\n",
-    "\n",
-    "<h1>Hello, world!</h1>\n",
-    "\n",
-    "Welcome to your new app.\n",
-    "<br>\n",
-    "สวัสดี\n",
-    "```"
+    ">    ```r\n",
+    ">    @page \"/\"\n",
+    ">\n",
+    ">    <PageTitle>Home</PageTitle>\n",
+    ">\n",
+    ">    <h1>Hello, world!</h1>\n",
+    ">\n",
+    ">    Welcome to your new app.\n",
+    ">    <br>\n",
+    ">    สวัสดี\n",
+    ">    ```"
    ]
   },
   {
@@ -126,44 +126,44 @@
     "15. คัดลอกบล็อกของ code สำหรับลิงค์ (บรรทัดที่ 23 - 27) แล้ววางลงใต้บล็อกที่ copy มา\n",
     "16. แก้ไข href และ ข้อความ link เมื่อแก้ไขแล้วจะเป็นดังนี้ \n",
     "\n",
-    "```r\n",
-    "<div class=\"top-row ps-3 navbar navbar-dark\">\n",
-    "    <div class=\"container-fluid\">\n",
-    "        <a class=\"navbar-brand\" href=\"\">BlazorServer1</a>\n",
-    "    </div>\n",
-    "</div>\n",
-    "\n",
-    "<input type=\"checkbox\" title=\"Navigation menu\" class=\"navbar-toggler\" />\n",
-    "\n",
-    "<div class=\"nav-scrollable\" onclick=\"document.querySelector('.navbar-toggler').click()\">\n",
-    "    <nav class=\"flex-column\">\n",
-    "        <div class=\"nav-item px-3\">\n",
-    "            <NavLink class=\"nav-link\" href=\"\" Match=\"NavLinkMatch.All\">\n",
-    "                <span class=\"bi bi-house-door-fill-nav-menu\" aria-hidden=\"true\"></span> Home\n",
-    "            </NavLink>\n",
-    "        </div>\n",
-    "\n",
-    "        <div class=\"nav-item px-3\">\n",
-    "            <NavLink class=\"nav-link\" href=\"counter\">\n",
-    "                <span class=\"bi bi-plus-square-fill-nav-menu\" aria-hidden=\"true\"></span> Counter\n",
-    "            </NavLink>\n",
-    "        </div>\n",
-    "\n",
-    "        <div class=\"nav-item px-3\">\n",
-    "            <NavLink class=\"nav-link\" href=\"weather\">\n",
-    "                <span class=\"bi bi-list-nested-nav-menu\" aria-hidden=\"true\"></span> Weather\n",
-    "            </NavLink>\n",
-    "        </div>\n",
-    "\n",
-    "        <div class=\"nav-item px-3\">\n",
-    "            <NavLink class=\"nav-link\" href=\"adder\">\n",
-    "                <span class=\"bi bi-list-nested-nav-menu\" aria-hidden=\"true\"></span> Adder\n",
-    "            </NavLink>\n",
-    "        </div>\n",
-    "\n",
-    "    </nav>\n",
-    "</div>\n",
-    "```    \n",
+    ">    ```r\n",
+    ">    <div class=\"top-row ps-3 navbar navbar-dark\">\n",
+    ">        <div class=\"container-fluid\">\n",
+    ">            <a class=\"navbar-brand\" href=\"\">BlazorServer1</a>\n",
+    ">        </div>\n",
+    ">    </div>\n",
+    ">\n",
+    ">    <input type=\"checkbox\" title=\"Navigation menu\" class=\"navbar-toggler\" />\n",
+    ">\n",
+    ">    <div class=\"nav-scrollable\" onclick=\"document.querySelector('.navbar-toggler').click()\">\n",
+    ">        <nav class=\"flex-column\">\n",
+    ">            <div class=\"nav-item px-3\">\n",
+    ">                <NavLink class=\"nav-link\" href=\"\" Match=\"NavLinkMatch.All\">\n",
+    ">                    <span class=\"bi bi-house-door-fill-nav-menu\" aria-hidden=\"true\"></span> Home\n",
+    ">                </NavLink>\n",
+    ">            </div>\n",
+    ">\n",
+    ">            <div class=\"nav-item px-3\">\n",
+    ">                <NavLink class=\"nav-link\" href=\"counter\">\n",
+    ">                    <span class=\"bi bi-plus-square-fill-nav-menu\" aria-hidden=\"true\"></span> Counter\n",
+    ">                </NavLink>\n",
+    ">            </div>\n",
+    ">\n",
+    ">            <div class=\"nav-item px-3\">\n",
+    ">                <NavLink class=\"nav-link\" href=\"weather\">\n",
+    ">                    <span class=\"bi bi-list-nested-nav-menu\" aria-hidden=\"true\"></span> Weather\n",
+    ">                </NavLink>\n",
+    ">            </div>\n",
+    ">\n",
+    ">            <div class=\"nav-item px-3\">\n",
+    ">                <NavLink class=\"nav-link\" href=\"adder\">\n",
+    ">                    <span class=\"bi bi-list-nested-nav-menu\" aria-hidden=\"true\"></span> Adder\n",
+    ">                </NavLink>\n",
+    ">            </div>\n",
+    ">\n",
+    ">        </nav>\n",
+    ">    </div>\n",
+    ">    ```    \n",
     "\n",
     "17. พิมพ์คำสั่ง `dotnet watch` ใน terminal เพื่อรันโปรแกรม\n",
     "18. สังเกตุหน้าเพจ ว่ามีเมนูใหม่เกิดขึ้นหรือไม่ ถ้ามี ให้ทดลองคลิกที่ลิงค์นั้น"
@@ -176,15 +176,15 @@
     "### 5.1 แก้ไขหน้า razor component ให้รองรับการกด link\n",
     "19. เปิดไฟล์ Components/Pages/Adder.razor\n",
     "20. เพิ่ม code สำหรับการเรียก route ไว้ในบรรทัดแรก เมื่อเพิ่มแล้วจะได้เนื้อหาในไฟล์เป็นดังนี้\n",
-    "```r\n",
-    "@page \"/adder\"\n",
-    "\n",
-    "<h3>Adder</h3>\n",
-    "\n",
-    "@code {\n",
-    "\n",
-    "}\n",
-    "```\n",
+    ">    ```r\n",
+    ">    @page \"/adder\"\n",
+    ">    \n",
+    ">    <h3>Adder</h3>\n",
+    ">    \n",
+    ">    @code {\n",
+    ">    \n",
+    ">    }\n",
+    ">    ```\n",
     "21. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
     "22. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
     "23. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n"
@@ -198,43 +198,43 @@
     "24. เปิดไฟล์  Components/Pages/Adder.razor\n",
     "25. เปลี่ยน code ทั้งหมดในไฟล์เป็นตาม code ด้านล่างนี้\n",
     "\n",
-    "```r\n",
-    "@page \"/adder\"\n",
-    "@rendermode InteractiveServer\n",
-    "<h3>Adder</h3>\n",
-    "<style>\n",
-    "    .btAdd {\n",
-    "        position: relative;\n",
-    "        left: 100px;\n",
-    "        height: 40px;\n",
-    "        width: 80px;\n",
-    "    }\n",
-    "\n",
-    "    .canvas {\n",
-    "        width: 300px;\n",
-    "        height: 300px;\n",
-    "        background-color: lightcyan;\n",
-    "        float: left;\n",
-    "        position: relative;\n",
-    "    }\n",
-    "</style>\n",
-    "\n",
-    "<div class=\"canvas\">\n",
-    "    <p> A:<input id=\"Text1\" @bind=\"A\" type=\"text\"> </p>\n",
-    "    <p> B:<input id=\"Text2\" @bind=\"B\" type=\"text\" /> </p>\n",
-    "    <p> <button @onclick=\"AddValues\" class=\"btAdd\"> @Label </button> </p>\n",
-    "    <p> C:<input id=\"Text3\" @bind=\"C\" type=\"text\" /> </p>\n",
-    "</div>\n",
-    "\n",
-    "@code {\n",
-    "    string Label = \"Add\";\n",
-    "    double A, B, C;\n",
-    "    private void AddValues()\n",
-    "    {\n",
-    "        C = A + B;\n",
-    "    }\n",
-    "}\n",
-    "```\n",
+    ">    ```r\n",
+    ">   @page \"/adder\"\n",
+    ">   @rendermode InteractiveServer\n",
+    ">   <h3>Adder</h3>\n",
+    ">   <style>\n",
+    ">       .btAdd {\n",
+    ">           position: relative;\n",
+    ">           left: 100px;\n",
+    ">           height: 40px;\n",
+    ">           width: 80px;\n",
+    ">       }\n",
+    ">\n",
+    ">       .canvas {\n",
+    ">           width: 300px;\n",
+    ">           height: 300px;\n",
+    ">           background-color: lightcyan;\n",
+    ">           float: left;\n",
+    ">           position: relative;\n",
+    ">       }\n",
+    ">   </style>\n",
+    ">\n",
+    ">   <div class=\"canvas\">\n",
+    ">       <p> A:<input id=\"Text1\" @bind=\"A\" type=\"text\"> </p>\n",
+    ">       <p> B:<input id=\"Text2\" @bind=\"B\" type=\"text\" /> </p>\n",
+    ">       <p> <button @onclick=\"AddValues\" class=\"btAdd\"> @Label </button> </p>\n",
+    ">       <p> C:<input id=\"Text3\" @bind=\"C\" type=\"text\" /> </p>\n",
+    ">   </div>\n",
+    ">\n",
+    ">   @code {\n",
+    ">       string Label = \"Add\";\n",
+    ">       double A, B, C;\n",
+    ">       private void AddValues()\n",
+    ">       {\n",
+    ">           C = A + B;\n",
+    ">       }\n",
+    ">   }\n",
+    ">   ```\n",
     "\n",
     "26. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
     "27. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
