--- a/Lab03-03-WindowForm-Application.ipynb
+++ b/Lab03-03-WindowForm-Application.ipynb
@@ -240,16 +240,15 @@
     "เราจำเป็นต้องเพิ่มตัวแปร reference ของ controls ไว้ในฐานะสมาชิกของคลาส Form1 ด้วย \n",
     "มิฉะนั้นจะไม่สามารถเรียกใช้จากส่วนอื่นของคลาสได้ \n",
     "\n",
-    "```cs \n",
-    "Button buttonAdd;\n",
-    "Label label_A;\n",
-    "Label label_B;\n",
-    "Label label_C;\n",
-    "TextBox textBox_A;\n",
-    "TextBox textBox_B;\n",
-    "TextBox textBox_C;\n",
-    "```\n",
-    "\n",
+    ">    ```cs \n",
+    ">    Button buttonAdd;\n",
+    ">    Label label_A;\n",
+    ">    Label label_B;\n",
+    ">    Label label_C;\n",
+    ">    TextBox textBox_A;\n",
+    ">    TextBox textBox_B;\n",
+    ">    TextBox textBox_C;\n",
+    ">    ```\n",
     "\n",
     "17. รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "18. สังเกตุและบันทึกผล"
