--- a/Lab03-05-Blazor-Web-Assembly-Application.ipynb
+++ b/Lab03-05-Blazor-Web-Assembly-Application.ipynb
@@ -11,7 +11,7 @@
     }
    },
    "source": [
-    "# Lab 3.3 Blazor Server application"
+    "# Lab 3.4 Blazor Web Assembly application"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "\n",
     "### 0.2 ตรวจสอบ Workload ว่าได้ติดตั้งส่วนประกอบต่างๆ ครบหรือยัง\n",
     "\n",
-    "- พิมพ์ `dotnet new list blazor` ใน terminal\n",
+    "- พิมพ์ `dotnet new list wasm` ใน terminal\n",
     "- ตรวจสอบว่ามี  Blazor WebAssembly App Empty หรือ Blazor WebAssembly Standalone App ติดตั้งในระบบ ถ้าไม่มี ให้ติดตั้งให้เรียบร้อย\n",
     "- ค้นหา template โดยใช้คำสั่ง `dotnet new search <ชื่อ template>`\n",
     "- ติดตั้ง template โดยใช้คำสั่ง `dotnet new install <ชื่อ template>`\n",
@@ -44,7 +44,7 @@
    "source": [
     "## 1. Introduction\n",
     "\n",
-    "Blazor Web Server application"
+    "Blazor Web Assembly application"
    ]
   },
   {
@@ -59,9 +59,9 @@
     "\n",
     "   2.1 ตรวจสอบว่าเป็น folder ที่จะสร้าง project ไว้ในนั้นจริง ๆ  \n",
     "\n",
-    "3. พิมพ์ `dotnet new blazor -n BlazorServer1 -o BlazorServer1` ใน terminal\n",
-    "4. พิมพ์คำสั่ง `dir` ใน terminal เพื่อดูว่ามี folder ชื่อ BlazorServer1 ที่ถูกสร้างขึ้นใหม่อยู่แล้วหรือยัง ถ้ายังไม่มี อาจจะเกิดจากการสร้างไม่สมบูรณ์\n",
-    "5. พิมพ์คำสั่ง `cd BlazorServer1` เพื่อเปลี่ยน folder  ที่ทำงานไปอยู่ในโปรเจค BlazorServer1\n",
+    "3. พิมพ์ `dotnet new blazorwasm -n BlazorWasm1 -o BlazorWasm1` ใน terminal\n",
+    "4. พิมพ์คำสั่ง `dir` ใน terminal เพื่อดูว่ามี folder ชื่อ BlazorWasm1 ที่ถูกสร้างขึ้นใหม่อยู่แล้วหรือยัง ถ้ายังไม่มี อาจจะเกิดจากการสร้างไม่สมบูรณ์\n",
+    "5. พิมพ์คำสั่ง `cd BlazorWasm1` เพื่อเปลี่ยน folder  ที่ทำงานไปอยู่ในโปรเจค BlazorWasm1\n",
     "6. พิมพ์คำสั่ง `dir` ใน terminal เพื่อดูว่ามีไฟล์อะไรบ้าง"
    ]
   },
