--- a/Lab03-05-Blazor-Web-Assembly-Application.ipynb
+++ b/Lab03-05-Blazor-Web-Assembly-Application.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. ทดลองแก้ไข code โดยการเปิดไฟล์ Home.razor ซึ่งอยู่ในโฟลเดอร์ Component/Pages ให้เป็นดังนี้\n",
+    "9. ทดลองแก้ไข code โดยการเปิดไฟล์ Home.razor ซึ่งอยู่ในโฟลเดอร์ Pages ให้เป็นดังนี้\n",
     "\n",
     ">    ```r\n",
     ">    @page \"/\"\n",
@@ -109,8 +109,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. บันทึกไฟล์\n",
-    "11. สังเกตุการเปลี่ยนแปลงและบันทึกหน้าจอ"
+    "10. บันทึกไฟล์  สังเกตุการเปลี่ยนแปลงและบันทึกหน้าจอ\n",
+    "11. ไปที่ terminal แล้วหยุดการทำงานของ dotnet watch โดยการกด Ctrl + C"
    ]
   },
   {
@@ -119,12 +119,27 @@
    "source": [
     "## 5. เพิ่ม razor page (blazor component)\n",
     "\n",
-    "12. พิมพ์คำสั่ง `dotnet new list razorcomponent`  ใน terminal เพื่อตรวจสอบว่ามี template สำหรับการสร้าง razor component ติดตั้งไว้หรือยัง \n",
+    "12. พิมพ์คำสั่ง `dotnet new list razorcomponent`  ใน terminal เพื่อตรวจสอบว่ามี template สำหรับการสร้าง razor component ติดตั้งไว้หรือยัง "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "13. พิมพ์คำสั่ง `dotnet new razorcomponent -n Adder -o Components/Pages` ใน terminal เพื่อสร้าง razor component โดยจะต้องสร้างไว้ในที่เดียวกับ component อื่นๆ \n",
+    "13. พิมพ์คำสั่ง `dotnet new razorcomponent -n Adder -o Pages` ใน terminal เพื่อสร้าง razor component โดยจะต้องสร้างไว้ในที่เดียวกับ component อื่นๆ \n",
     "14. เปิดไฟล์ Components/Layout/NavMenu.razor เพื่อเพิ่ม link ที่หน้า navigation มายัง component ที่สร้างขึ้น\n",
-    "15. คัดลอกบล็อกของ code สำหรับลิงค์ (บรรทัดที่ 23 - 27) แล้ววางลงใต้บล็อกที่ copy มา\n",
-    "16. แก้ไข href และ ข้อความ link เมื่อแก้ไขแล้วจะเป็นดังนี้ \n",
+    "15. คัดลอกบล็อกของ code สำหรับลิงค์ (บรรทัดที่ 23 - 27) แล้ววางลงใต้บล็อกที่ copy มา    \n",
+    "16. พิมพ์คำสั่ง `dotnet new razorcomponent -n Adder -o Pages` ใน terminal เพื่อสร้าง razor component โดยจะต้องสร้างไว้ในที่เดียวกับ component อื่นๆ \n",
+    "17. เปิดไฟล์ Components/Layout/NavMenu.razor เพื่อเพิ่ม link ที่หน้า navigation มายัง component ที่สร้างขึ้น\n",
+    "18. คัดลอกบล็อกของ code สำหรับลิงค์ (บรรทัดที่ 23 - 27) แล้ววางลงใต้บล็อกที่ copy มา   \n",
+    "19. แก้ไข href และ ข้อความ link เมื่อแก้ไขแล้วจะเป็นดังนี้ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     ">    ```r\n",
     ">    <div class=\"top-row ps-3 navbar navbar-dark\">\n",
@@ -163,10 +178,15 @@
     ">\n",
     ">        </nav>\n",
     ">    </div>\n",
-    ">    ```    \n",
-    "\n",
-    "17. พิมพ์คำสั่ง `dotnet watch` ใน terminal เพื่อรันโปรแกรม\n",
-    "18. สังเกตุหน้าเพจ ว่ามีเมนูใหม่เกิดขึ้นหรือไม่ ถ้ามี ให้ทดลองคลิกที่ลิงค์นั้น"
+    ">    ```    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "20. พิมพ์คำสั่ง `dotnet watch` ใน terminal เพื่อรันโปรแกรม\n",
+    "21. สังเกตุหน้าเพจ ว่ามีเมนูใหม่เกิดขึ้นหรือไม่ ถ้ามี ให้ทดลองคลิกที่ลิงค์นั้น"
    ]
   },
   {
