--- a/Lab03-05-Blazor-Web-Assembly-Application.ipynb
+++ b/Lab03-05-Blazor-Web-Assembly-Application.ipynb
@@ -127,13 +127,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "13. พิมพ์คำสั่ง `dotnet new razorcomponent -n Adder -o Pages` ใน terminal เพื่อสร้าง razor component โดยจะต้องสร้างไว้ในที่เดียวกับ component อื่นๆ \n",
-    "14. เปิดไฟล์ Components/Layout/NavMenu.razor เพื่อเพิ่ม link ที่หน้า navigation มายัง component ที่สร้างขึ้น\n",
-    "15. คัดลอกบล็อกของ code สำหรับลิงค์ (บรรทัดที่ 23 - 27) แล้ววางลงใต้บล็อกที่ copy มา    \n",
-    "16. พิมพ์คำสั่ง `dotnet new razorcomponent -n Adder -o Pages` ใน terminal เพื่อสร้าง razor component โดยจะต้องสร้างไว้ในที่เดียวกับ component อื่นๆ \n",
-    "17. เปิดไฟล์ Components/Layout/NavMenu.razor เพื่อเพิ่ม link ที่หน้า navigation มายัง component ที่สร้างขึ้น\n",
-    "18. คัดลอกบล็อกของ code สำหรับลิงค์ (บรรทัดที่ 23 - 27) แล้ววางลงใต้บล็อกที่ copy มา   \n",
-    "19. แก้ไข href และ ข้อความ link เมื่อแก้ไขแล้วจะเป็นดังนี้ "
+    "13. พิมพ์คำสั่ง `dotnet new razorcomponent -n Adder -o Pages` ใน terminal เพื่อสร้าง razor component โดยจะต้องสร้างไว้ในที่เดียวกับ page อื่นๆ \n",
+    "14. เปิดไฟล์ Layout/NavMenu.razor เพื่อเพิ่ม link ที่หน้า navigation มายัง component ที่สร้างขึ้น\n",
+    "15. คัดลอกบล็อกของ code สำหรับลิงค์ (บรรทัดที่ 22 - 26) แล้ววางลงใต้บล็อกที่ copy มา    \n",
+    "16. แก้ไข href และ ข้อความ link เมื่อแก้ไขแล้วจะเป็นดังนี้ "
    ]
   },
   {
@@ -185,8 +182,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "20. พิมพ์คำสั่ง `dotnet watch` ใน terminal เพื่อรันโปรแกรม\n",
-    "21. สังเกตุหน้าเพจ ว่ามีเมนูใหม่เกิดขึ้นหรือไม่ ถ้ามี ให้ทดลองคลิกที่ลิงค์นั้น"
+    "17. พิมพ์คำสั่ง `dotnet watch` ใน terminal เพื่อรันโปรแกรม\n",
+    "18. สังเกตุหน้าเพจ ว่ามีเมนูใหม่เกิดขึ้นหรือไม่ ถ้ามี ให้ทดลองคลิกที่ลิงค์นั้น"
    ]
   },
   {
@@ -220,7 +217,6 @@
     "\n",
     ">    ```r\n",
     ">   @page \"/adder\"\n",
-    ">   @rendermode InteractiveServer\n",
     ">   <h3>Adder</h3>\n",
     ">   <style>\n",
     ">       .btAdd {\n",
@@ -293,7 +289,8 @@
     "2. ถ้าไม่ตัวเลขใดเฉพาะช่อง A แต่ไม่ใส่ในช่อง B แล้วกด Add จะเกิดอะไรขึ้น\n",
     "3. ถ้าไม่ตัวเลขใดเฉพาะช่อง B แต่ไม่ใส่ในช่อง A แล้วกด Add จะเกิดอะไรขึ้น\n",
     "4. ถ้าใส่อักษรที่ไม่ใช่ตัวเลขลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
-    "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น"
+    "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "6. Code ของโปรแกรมในใบงานนี้กับใบงานก่อนหน้า (Blazor server) เฉพาะส่วนของ Homepage และ Adder page มีส่วนที่แตกต่างกันตรงไหนบ้าง"
    ]
   }
  ],
