--- a/Lab03-01-Introduction.ipynb
+++ b/Lab03-01-Introduction.ipynb
@@ -11,11 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Console Application\n",
-    "- Winform application (by powershell tools)\n",
-    "- Blazor server app\n",
-    "- Blazor app\n",
-    "- Net Maui app"
+    "## [Lab 3.1 Console Application](./Lab03-02-Console-Application.ipynb)\n",
+    "\n",
+    "## [Lab 3.2 Winform application](./Lab03-03-WindowForm-Application.ipynb)\n",
+    "\n",
+    "## [Lab 3.3 Blazor server app](./Lab03-04-Blazor-Server-Application.ipynb)\n",
+    "\n",
+    "## [Lab 3.4 Blazor app](./Lab03-05-Blazor-Web-Assembly-Application.ipynb)\n"
    ]
   }
  ],
