--- a/Lab03-01-Introduction.ipynb
+++ b/Lab03-01-Introduction.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "## [Lab 3.3 Blazor server app](./Lab03-04-Blazor-Server-Application.ipynb)\n",
     "\n",
-    "## [Lab 3.4 Blazor app](./Lab03-05-Blazor-Web-Assembly-Application.ipynb)\n"
+    "## [Lab 3.4 Blazor web assembly](./Lab03-05-Blazor-Web-Assembly-Application.ipynb)\n"
    ]
   }
  ],
