--- a/Lab03-02-Console-Application.ipynb
+++ b/Lab03-02-Console-Application.ipynb
@@ -172,6 +172,18 @@
     "\n",
     "17. รันโปรแกรม และบันทึกว่ามีข้อความ error ว่าอย่างไร (ให้บันทึกเฉพาะข้อความที่แสดง error)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dotnet build D:\\lab03_oop\\HelloWorld-Lab03\\HelloWorld-Lab03\\HelloWorld-Lab03.csproj /property:GenerateFullPaths=true /consoleloggerparameters:NoSummary /p:Configuration=Debug /p:Platform=\"AnyCPU\" \n",
+    "  Determining projects to restore...\n",
+    "  All projects are up-to-date for restore.\n",
+    "D:\\lab03_oop\\HelloWorld-Lab03\\HelloWorld-Lab03\\Program.cs(2,1): error CS0103: The name 'console' does not exist in the current context [D:\\lab03_oop\\HelloWorld-Lab03\\HelloWorld-Lab03\\HelloWorld-Lab03.csproj]\n",
+    "\n",
+    "Workload updates are available. Run dotnet workload list for more information."
+   ]
   }
  ],
  "metadata": {
