--- a/Lab03-03-WindowForm-Application.ipynb
+++ b/Lab03-03-WindowForm-Application.ipynb
@@ -559,7 +559,7 @@
    "metadata": {},
    "source": [
     "## คำถาม\n",
-    "1. ถ้าไม่ใส่ตัวเลขใดๆ เลย ทั้งช่อง A และ B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "1. ถ้าไม่ใส่ตัวเลขใดๆ เลย ทั้งช่อง A และ B แล้วกด Add จะเกิดอะไรขึ้น.\n",
     "   \n",
     "   ตอบ จะได้ผลลัพธ์ที่ช่อง C = 0\n",
     "   \n",
