--- a/Lab03-05-Blazor-Web-Assembly-Application.ipynb
+++ b/Lab03-05-Blazor-Web-Assembly-Application.ipynb
@@ -362,7 +362,7 @@
     "\n",
     "6. Code ของโปรแกรมในใบงานนี้กับใบงานก่อนหน้า (Blazor server) เฉพาะส่วนของ Homepage และ Adder page มีส่วนที่แตกต่างกันตรงไหนบ้าง\n",
     "\n",
-    "ตอบ ส่วนที่แตกต่างกันคือ Pathที่อยู่ของโค้ดอยู่คนละ Floder กัน"
+    "ตอบ ส่วนที่แตกต่างกันคือ Pathที่อยู่ของโค้ดอยู่คนละ Floder กัน."
    ]
   }
  ],
