--- a/Lab03-02-Console-Application.ipynb
+++ b/Lab03-02-Console-Application.ipynb
@@ -164,6 +164,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Restore complete (0.7s)\n",
+    "  HelloWorld-Lab3 failed with 1 error(s) (0.4s)\n",
+    "    C:\\Users\\ASUS\\OOP-2567\\Lab03-Dotnet-Applications\\HelloWorld-Lab3\\Program.cs(2,1): error CS0103: The name 'console' does not exist in the current context\n",
+    "\n",
+    "Build failed with 1 error(s) in 1.5s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4.2 การแก้ปัญหาเนื่องจากการใช้ชื่อไม่ถูกต้อง \n",
     "\n",
     "16. แก้ code ในบรรทัดที่ 2 ของไฟล์ Program.cs ให้เป็นดังต่อไปนี้\n",
@@ -171,6 +182,17 @@
     "`Console.WriteLine('Hello World!');`\n",
     "\n",
     "17. รันโปรแกรม และบันทึกว่ามีข้อความ error ว่าอย่างไร (ให้บันทึกเฉพาะข้อความที่แสดง error)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Restore complete (0.7s)\n",
+    "  HelloWorld-Lab3 failed with 1 error(s) (0.4s)\n",
+    "    C:\\Users\\ASUS\\OOP-2567\\Lab03-Dotnet-Applications\\HelloWorld-Lab3\\Program.cs(2,19): error CS1012: Too many characters in character literal\n",
+    "\n",
+    "Build failed with 1 error(s) in 1.5s"
    ]
   }
  ],
