--- a/Lab03-02-Console-Application.ipynb
+++ b/Lab03-02-Console-Application.ipynb
@@ -136,7 +136,8 @@
     "\n",
     " ![image.png](attachment:image.png)\n",
     "\n",
-    "13. บันทึกหน้าจอที่ได้"
+    "13. บันทึกหน้าจอที่ได้\n",
+    "![image.png](Picture\\01.png)"
    ]
   },
   {
@@ -157,6 +158,7 @@
     "`console.WriteLine(\"Hello World!\");`\n",
     "\n",
     "15. รันโปรแกรม และบันทึกว่ามีข้อความ error ว่าอย่างไร (ให้บันทึกเฉพาะข้อความที่แสดง error)\n",
+    "![image.png](Picture\\02.png)\n",
     "\n"
    ]
   },
@@ -170,7 +172,8 @@
     "\n",
     "`Console.WriteLine('Hello World!');`\n",
     "\n",
-    "17. รันโปรแกรม และบันทึกว่ามีข้อความ error ว่าอย่างไร (ให้บันทึกเฉพาะข้อความที่แสดง error)\n"
+    "17. รันโปรแกรม และบันทึกว่ามีข้อความ error ว่าอย่างไร (ให้บันทึกเฉพาะข้อความที่แสดง error)\n",
+    "![image.png](Picture\\03.png)\n"
    ]
   }
  ],
