--- a/Lab03-03-WindowForm-Application.ipynb
+++ b/Lab03-03-WindowForm-Application.ipynb
@@ -140,7 +140,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![image.png](Picture\\04.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,7 +258,8 @@
     ">    ```\n",
     "\n",
     "17. รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
-    "18. สังเกตุและบันทึกผล"
+    "18. สังเกตุและบันทึกผล\n",
+    "![image.png](Picture\\05.png)"
    ]
   },
   {
@@ -282,7 +285,8 @@
     "\n",
     "19.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
-    "19.3 สังเกตุและบันทึกผล\n"
+    "19.3 สังเกตุและบันทึกผล\n",
+    "![image.png](Picture\\06.png)\n"
    ]
   },
   {
@@ -304,7 +308,8 @@
     "\n",
     "20.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
-    "20.3 สังเกตุและบันทึกผล\n"
+    "20.3 สังเกตุและบันทึกผล\n",
+    "![image.png](Picture\\07.png)\n"
    ]
   },
   {
@@ -324,7 +329,8 @@
     "\n",
     "21.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
-    "21.3 สังเกตุและบันทึกผล"
+    "21.3 สังเกตุและบันทึกผล\n",
+    "![image.png](Picture\\08.png)"
    ]
   },
   {
@@ -344,7 +350,8 @@
     "\n",
     "22.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
-    "22.3 สังเกตุและบันทึกผล"
+    "22.3 สังเกตุและบันทึกผล\n",
+    "![image.png](Picture\\09.png)"
    ]
   },
   {
@@ -368,7 +375,8 @@
     ">    ```\n",
     "23.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
-    "23.3 สังเกตุและบันทึกผล"
+    "23.3 สังเกตุและบันทึกผล\n",
+    "![image.png](Picture\\10.png)"
    ]
   },
   {
@@ -394,7 +402,8 @@
     "\n",
     "24.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
-    "24.3 สังเกตุและบันทึกผล\n"
+    "24.3 สังเกตุและบันทึกผล\n",
+    "![image.png](Picture\\11.png)"
    ]
   },
   {
@@ -428,7 +437,8 @@
     ">    }\n",
     ">    ```\n",
     "\n",
-    "25.3 ฺ  พิมพ์คำสั่ง dotnet build ใน terminal ต้องไม่มี error ใดๆ ถ้ามีให้แก้ให้ถูกต้อง "
+    "25.3 ฺ  พิมพ์คำสั่ง dotnet build ใน terminal ต้องไม่มี error ใดๆ ถ้ามีให้แก้ให้ถูกต้อง \n",
+    "![image.png](Picture\\12.png)"
    ]
   },
   {
@@ -439,7 +449,8 @@
     "\n",
     "26.1 พิมพ์คำสั่ง dotnet run ใน terminal \n",
     "\n",
-    "26.2 ใส่ตัวเลขใน textbox A  และ B แล้วกดปุ่ม Add บันทึกผลที่ได้"
+    "26.2 ใส่ตัวเลขใน textbox A  และ B แล้วกดปุ่ม Add บันทึกผลที่ได้\n",
+    "![image.png](Picture\\13.png)"
    ]
   },
   {
@@ -451,7 +462,14 @@
     "2. ถ้าไม่ตัวเลขใดเฉพาะช่อง A แต่ไม่ใส่ในช่อง B แล้วกด Add จะเกิดอะไรขึ้น\n",
     "3. ถ้าไม่ตัวเลขใดเฉพาะช่อง B แต่ไม่ใส่ในช่อง A แล้วกด Add จะเกิดอะไรขึ้น\n",
     "4. ถ้าใส่อักษรที่ไม่ใช่ตัวเลขลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
-    "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n"
+    "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "\n",
+    "## ตอบคำถาม\n",
+    "1. ขึ้นตัวเลข 0 ที่ช่อง C\n",
+    "2. ขึ้นตัวเลขที่ป้อนเข้าไปในช่อง A แสดงผลที่ช่อง C\n",
+    "3. ขึ้นตัวเลขที่ป้อนเข้าไปในช่อง B แสดงผลที่ช่อง C\n",
+    "4. หากไม่ใส่ตัวเลขที่ช่องAหรือBแล้วใส่ตัวอักษรไป จะขึ้นตัวเลข 0 ที่ช่อง C แต่ถ้าหากใส่ตัวอักษรไปที่ช่องใดช่องหนึ่งแล้วอีกช่องใส่ตัวเลข ช่อง C จะแสดงผลลัพธ์เป็นตัวเลขที่พิมพ์ในช่อง A หรือ B\n",
+    "5. ขึ้นผลลัพธ์การบวกที่ช่อง C เป็นทศนิยม และคำตอบถูกต้อง"
    ]
   }
  ],
