--- a/Lab03-04-Blazor-Server-Application.ipynb
+++ b/Lab03-04-Blazor-Server-Application.ipynb
@@ -110,7 +110,8 @@
    "metadata": {},
    "source": [
     "10. บันทึกไฟล์\n",
-    "11. สังเกตุการเปลี่ยนแปลงและบันทึกหน้าจอ"
+    "11. สังเกตุการเปลี่ยนแปลงและบันทึกหน้าจอ\n",
+    "![image.png](Picture\\14.png)"
    ]
   },
   {
@@ -187,7 +188,8 @@
     ">    ```\n",
     "21. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
     "22. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
-    "23. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n"
+    "23. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n",
+    "![image.png](Picture\\15.png)\n"
    ]
   },
   {
@@ -238,7 +240,8 @@
     "\n",
     "26. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
     "27. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
-    "28. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง"
+    "28. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n",
+    "![image.png](Picture\\16.png)"
    ]
   },
   {
@@ -261,7 +264,8 @@
     "31. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
     "32. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
     "33. สังเกตุและบันทึกผลการทดลอง\n",
-    "34. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n"
+    "34. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n",
+    "![image.png](Picture\\17.png)\n"
    ]
   },
   {
@@ -273,7 +277,13 @@
     "2. ถ้าไม่ตัวเลขใดเฉพาะช่อง A แต่ไม่ใส่ในช่อง B แล้วกด Add จะเกิดอะไรขึ้น\n",
     "3. ถ้าไม่ตัวเลขใดเฉพาะช่อง B แต่ไม่ใส่ในช่อง A แล้วกด Add จะเกิดอะไรขึ้น\n",
     "4. ถ้าใส่อักษรที่ไม่ใช่ตัวเลขลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
-    "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น"
+    "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "## ตอบคำถาม\n",
+    "1. ขึ้นตัวเลข 0 ที่ช่อง C\n",
+    "2. ขึ้นตัวเลขที่ป้อนเข้าไปในช่อง A แสดงผลที่ช่อง C\n",
+    "3. ขึ้นตัวเลขที่ป้อนเข้าไปในช่อง B แสดงผลที่ช่อง C\n",
+    "4. หากไม่ใส่ตัวเลขที่ช่องAหรือBแล้วใส่ตัวอักษรไป จะขึ้นตัวเลข 0 ที่ช่อง C แต่ถ้าหากใส่ตัวอักษรไปที่ช่องใดช่องหนึ่งแล้วอีกช่องใส่ตัวเลข ช่อง C จะแสดงผลลัพธ์เป็นตัวเลขที่พิมพ์ในช่อง A หรือ B\n",
+    "5. ขึ้นผลลัพธ์การบวกที่ช่อง C เป็นทศนิยม และคำตอบถูกต้อง"
    ]
   }
  ],
