--- a/Lab03-05-Blazor-Web-Assembly-Application.ipynb
+++ b/Lab03-05-Blazor-Web-Assembly-Application.ipynb
@@ -83,7 +83,8 @@
     "\n",
     "คำสั่ง dotnet watch ใช้เพื่อรันในโหมด hot reload หมายความว่า เมื่อทำการแก้ไข source code จะมีการ upload  และ refresh ให้โดยอัตโนมัติ\n",
     "\n",
-    "8. สังเกตุการเปลี่ยนแปลงและบันทึกหน้าจอ"
+    "8. สังเกตุการเปลี่ยนแปลงและบันทึกหน้าจอ\n",
+    "![image.png](Picture\\18.png)"
    ]
   },
   {
@@ -110,6 +111,7 @@
    "metadata": {},
    "source": [
     "10. บันทึกไฟล์  สังเกตุการเปลี่ยนแปลงและบันทึกหน้าจอ\n",
+    "![image.png](Picture\\19.png)\n",
     "11. ไปที่ terminal แล้วหยุดการทำงานของ dotnet watch โดยการกด Ctrl + C"
    ]
   },
@@ -204,7 +206,8 @@
     ">    ```\n",
     "21. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
     "22. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
-    "23. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n"
+    "23. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n",
+    "![image.png](Picture\\20.png)\n"
    ]
   },
   {
@@ -254,7 +257,8 @@
     "\n",
     "26. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
     "27. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
-    "28. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง"
+    "28. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n",
+    "![image.png](Picture\\21.png)"
    ]
   },
   {
@@ -277,7 +281,8 @@
     "31. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
     "32. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
     "33. สังเกตุและบันทึกผลการทดลอง\n",
-    "34. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n"
+    "34. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n",
+    "![image.png](Picture\\22.png)"
    ]
   },
   {
@@ -290,7 +295,14 @@
     "3. ถ้าไม่ตัวเลขใดเฉพาะช่อง B แต่ไม่ใส่ในช่อง A แล้วกด Add จะเกิดอะไรขึ้น\n",
     "4. ถ้าใส่อักษรที่ไม่ใช่ตัวเลขลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
     "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
-    "6. Code ของโปรแกรมในใบงานนี้กับใบงานก่อนหน้า (Blazor server) เฉพาะส่วนของ Homepage และ Adder page มีส่วนที่แตกต่างกันตรงไหนบ้าง"
+    "6. Code ของโปรแกรมในใบงานนี้กับใบงานก่อนหน้า (Blazor server) เฉพาะส่วนของ Homepage และ Adder page มีส่วนที่แตกต่างกันตรงไหนบ้าง\n",
+    "## ตอบคำถาม\n",
+    "1. ขึ้นตัวเลข 0 ที่ช่อง C\n",
+    "2. ขึ้นตัวเลขที่ป้อนเข้าไปในช่อง A แสดงผลที่ช่อง C\n",
+    "3. ขึ้นตัวเลขที่ป้อนเข้าไปในช่อง B แสดงผลที่ช่อง C\n",
+    "4. หากไม่ใส่ตัวเลขที่ช่องAหรือBแล้วใส่ตัวอักษรไป จะขึ้นตัวเลข 0 ที่ช่อง C แต่ถ้าหากใส่ตัวอักษรไปที่ช่องใดช่องหนึ่งแล้วอีกช่องใส่ตัวเลข ช่อง C จะแสดงผลลัพธ์เป็นตัวเลขที่พิมพ์ในช่อง A หรือ B\n",
+    "5. ขึ้นผลลัพธ์การบวกที่ช่อง C เป็นทศนิยม และคำตอบถูกต้อง\n",
+    "6. ในส่วนขของโค้ดทั้งสองโปรแกรมใช้คำสั่งเฟมือนกันต่างกันที่ชื่อแค่นั้น ในใบงานนี้ BlazorWasm เรียกใช้ฟังก์ชันได้โดยตรงในโค้ดของส่วนประกอบ (component) แต่ในใบงานก่อนหน้า BlazorServer ต้องใช้คำสั่งเพื่อส่งคำสั่งไปยังเซิร์ฟเวอร์ BlazorWasm จะมีไฟล์ .razor เพิ่มเติมที่เกี่ยวข้องกับ WebAssembly ส่วนในBlazor Server โครงสร้างไฟล์จะคล้ายกับแอป ASP.NET Core ทั่วไป"
    ]
   }
  ],
