--- a/Lab03-02-Console-Application.ipynb
+++ b/Lab03-02-Console-Application.ipynb
@@ -164,6 +164,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "error\n",
+    "\n",
+    "D:\\github\\Lab03-Dotnet-Applications\\HelloWorld-Lab03\\Program.cs(2,1): error CS0103: The name 'console' does not exist in the current context [D:\\github\\Lab03-Dotnet-Applications\\HelloWorld-Lab03\\HelloWorld-Lab03.csproj]  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4.2 การแก้ปัญหาเนื่องจากการใช้ชื่อไม่ถูกต้อง \n",
     "\n",
     "16. แก้ code ในบรรทัดที่ 2 ของไฟล์ Program.cs ให้เป็นดังต่อไปนี้\n",
@@ -171,6 +180,15 @@
     "`Console.WriteLine('Hello World!');`\n",
     "\n",
     "17. รันโปรแกรม และบันทึกว่ามีข้อความ error ว่าอย่างไร (ให้บันทึกเฉพาะข้อความที่แสดง error)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "error\n",
+    "\n",
+    "D:\\github\\Lab03-Dotnet-Applications\\HelloWorld-Lab03\\Program.cs(2,19): error CS1012: Too many characters in character literal [D:\\github\\Lab03-Dotnet-Applications\\HelloWorld-Lab03\\HelloWorld-Lab03.csproj]"
    ]
   }
  ],
