--- a/Lab03-03-WindowForm-Application.ipynb
+++ b/Lab03-03-WindowForm-Application.ipynb
@@ -451,7 +451,20 @@
     "2. ถ้าไม่ตัวเลขใดเฉพาะช่อง A แต่ไม่ใส่ในช่อง B แล้วกด Add จะเกิดอะไรขึ้น\n",
     "3. ถ้าไม่ตัวเลขใดเฉพาะช่อง B แต่ไม่ใส่ในช่อง A แล้วกด Add จะเกิดอะไรขึ้น\n",
     "4. ถ้าใส่อักษรที่ไม่ใช่ตัวเลขลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
-    "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n"
+    "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ตอบคำถาม\n",
+    "1. ตอบ ผลลัพธ์เท่ากับ 0\n",
+    "2. ตอบ ผลลัพธ์เท่ากับ 0\n",
+    "3. ตอบ ผลลัพธ์เท่ากับเลขที่ใส่ไปในช่อง B\n",
+    "4. ตอบ ผลลัพธ์เท่ากับ 0\n",
+    "5. ตอบ ผลลัพธ์คือผลรวมของตัวเลขที่ใส่ไป ดดยรวมจุดทศนิยมด้วย"
    ]
   }
  ],
