--- a/Lab03-05-Blazor-Web-Assembly-Application.ipynb
+++ b/Lab03-05-Blazor-Web-Assembly-Application.ipynb
@@ -292,6 +292,19 @@
     "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
     "6. Code ของโปรแกรมในใบงานนี้กับใบงานก่อนหน้า (Blazor server) เฉพาะส่วนของ Homepage และ Adder page มีส่วนที่แตกต่างกันตรงไหนบ้าง"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ตอบคำถาม\n",
+    "1. ตอบ ผลลัพธ์ขึ้นเลข 0\n",
+    "2. ตอบ ผลลัพธ์เท่ากับเลขที่ใส่ในข่อง A\n",
+    "3. ตอบ ผลลัพธ์เท่ากับเลขที่ใส่ในข่อง B\n",
+    "4. ตอบ ตัวอักษรจะหายไป และขึ้นค่าที่เคยใส่ไว้ก่อนหน้า\n",
+    "5. ตอบ ผลลัพธ์เท่ากับผลรวมของเลขที่ใส่ไป\n",
+    "6. ตอบ ที่อยู่ของ Path ของโค้ดอยู่คนละโฟลเดอร์"
+   ]
   }
  ],
  "metadata": {
